--- a/CP/index.html
+++ b/CP/index.html
@@ -1,24 +1,27 @@
-<html><head>
+
+<html>
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet " type="text/css" href="/cses.css?2" id="styles">
   <link rel="stylesheet alternate" type="text/css" href="/cses-dark.css?2" id="styles-dark">
   <meta name="theme-color" content="white" id="theme-color">
   <script type="application/json" id="darkmode-enabled">false</script>
-  <script src="js/ui.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/all.min.css">
+  <script src="/ui.js"></script>
+  <link rel="stylesheet" type="text/css" href="/lib/fontawesome/css/all.min.css">
 </head>
 <body class="with-sidebar ">
   <div class="header">
     <div>
-      <a href="/" class="logo"><img src="images/logo.png" alt="CSES"></a>
+      <a href="/" class="logo"><img src="/logo.png?1" alt="CSES"></a>
       <a class="menu-toggle" onclick="document.body.classList.toggle('menu-open');">
         <i class="fas fa-bars"></i>
       </a>
       <div class="controls">
-                <a class="account" href="/login">Login</a>
-        <span>—</span>
+                <a class="account" href="/user/103858">isles</a>
+        <span>&mdash;</span>
                         <a href="/darkmode" title="Toggle dark mode" onclick="return toggle_theme()"><i class="fas fa-adjust"></i><span>Dark mode</span></a>
+                <a href="/logout" title="Log out"><i class="fas fa-sign-out-alt"></i><span>Log out</span></a>
               </div>
     </div>
   </div>
@@ -27,10 +30,12 @@
   <div class="navigation">
     <div class="title-block">
       <h3><a href="/problemset/list/">CSES Problem Set</a></h3>
-      <h1>Point Location Test</h1>
+      <h1>De Bruijn Sequence</h1>
 <ul class="nav">
-<li><a href="/problemset/task/2189/" class="current">Task</a></li>
-<li><a href="/problemset/stats/2189/">Statistics</a></li>
+<li><a href="/problemset/task/1692/" class="current">Task</a></li>
+<li><a href="/problemset/submit/1692/" >Submit</a></li>
+<li><a href="/problemset/view/1692/" >Results</a></li>
+<li><a href="/problemset/stats/1692/" >Statistics</a></li>
 </ul>
     </div>
     <div class="sidebar"></div>
@@ -41,7 +46,7 @@
     <div class="content">
 
 
-<title>CSES - Point Location Test</title><script type="text/x-mathjax-config">
+<title>CSES - De Bruijn Sequence</title><script type="text/x-mathjax-config">
 MathJax.Hub.Config({
   tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
   "HTML-CSS": {
@@ -54,47 +59,42 @@ MathJax.Hub.Config({
   },
 });
 </script>
-<script type="text/javascript" src="js/MathJax.js">
+<script type="text/javascript"
+  src="/lib/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
-<script src="js/run_prettify.js"></script>
+<script src="/lib/google-code-prettify/run_prettify.js"></script>
 <ul class="task-constraints">
 <li><b>Time limit:</b> 1.00 s</li>
 <li><b>Memory limit:</b> 512 MB</li>
 </ul>
 <input type="hidden" name="course" value="problemset">
-<input type="hidden" name="task" value="2189">
-There is a line that goes through the points $p_1=(x_1,y_1)$ and $p_2=(x_2,y_2)$. There is also a point $p_3=(x_3,y_3)$.<br>
-<br>
-Your task is to determine whether $p_3$ is located on the left or right side of the line or if it touches the line when we are looking from $p_1$ to $p_2$.<br>
-<br>
-<b id="input">Input</b><br>
-<br>
-The first input line has an integer $t$: the number of tests.<br>
-<br>
-After this, there are $t$ lines that describe the tests. Each line has six integers: $x_1$, $y_1$, $x_2$, $y_2$, $x_3$ and $y_3$.<br>
-<br>
-<b id="output">Output</b><br>
-<br>
-For each test, print "LEFT", "RIGHT" or "TOUCH".<br>
-<br>
-<b id="constraints">Constraints</b><br>
+<input type="hidden" name="task" value="1692">
+Your task is to construct a minimum-length bit string that contains all possible substrings of length $n$. For example, when $n=2$, the string 00110 is a valid solution, because its substrings of length $2$ are 00, 01, 10 and 11.<br />
+<br />
+<b id="input">Input</b><br />
+<br />
+The only input line has an integer $n$.<br />
+<br />
+<b id="output">Output</b><br />
+<br />
+Print a minimum-length bit string that contains all substrings of length $n$. You can print any valid solution.<br />
+<br />
+<b id="constraints">Constraints</b><br />
 <ul>
-<li>$1 \le t \le 10^5$<br>
-</li><li>$-10^9 \le x_1, y_1, x_2, y_2, x_3, y_3 \le 10^9$<br>
-</li><li>$x_1 \neq x_2$ or $y_1 \neq y_2$<br>
-</li></ul>
-<b id="example">Example</b><br>
-<br>
-Input:<br>
-<code>3<br>
-1 1 5 3 2 3<br>
-1 1 5 3 4 1<br>
-1 1 5 3 3 2</code><br>
-<br>
-Output:<br>
-<code>LEFT<br>
-RIGHT<br>
-TOUCH</code>    </div>
+<li>$1 \le n \le 15$<br />
+</ul>
+<b id="example">Example</b><br />
+<br />
+Input:<br />
+<code>2</code><br />
+<br />
+Output:<br />
+<code>00110</code>    </div>
     <div class="nav sidebar">
-<h4>Geometry</h4><a class="current" href="/problemset/task/2189">Point Location Test<span class="task-score icon "></span></a><a href="/problemset/task/2190">Line Segment Intersection<span class="task-score icon "></span></a><a href="/problemset/task/2191">Polygon Area<span class="task-score icon "></span></a><a href="/problemset/task/2192">Point in Polygon<span class="task-score icon "></span></a><a href="/problemset/task/2193">Polygon Lattice Points<span class="task-score icon "></span></a><a href="/problemset/task/2194">Minimum Euclidean Distance<span class="task-score icon "></span></a><a href="/problemset/task/2195">Convex Hull<span class="task-score icon "></span></a>      <hr>
-</div></div></div></body></html>
+<h4>Graph Algorithms</h4>...
+<a  href="/problemset/task/1684">Giant Pizza<span class="task-score icon "></span></a><a  href="/problemset/task/1686">Coin Collector<span class="task-score icon full"></span></a><a  href="/problemset/task/1691">Mail Delivery<span class="task-score icon "></span></a><a class="current" href="/problemset/task/1692">De Bruijn Sequence<span class="task-score icon "></span></a><a  href="/problemset/task/1693">Teleporters Path<span class="task-score icon "></span></a><a  href="/problemset/task/1690">Hamiltonian Flights<span class="task-score icon "></span></a><a  href="/problemset/task/1689">Knight's Tour<span class="task-score icon "></span></a><a  href="/problemset/task/1694">Download Speed<span class="task-score icon "></span></a>...
+      <hr />
+<h4>Your submissions</h4>
+
+</div>
+</div>
