--- a/CP/index.html
+++ b/CP/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet " type="text/css" href="/cses.css?2" id="styles">
+  <link rel="stylesheet " type="text/css" href="./cses.css?2" id="styles">
   <link rel="stylesheet alternate" type="text/css" href="/cses-dark.css?2" id="styles-dark">
   <meta name="theme-color" content="white" id="theme-color">
   <script type="application/json" id="darkmode-enabled">false</script>
-  <script src="/ui.js"></script>
-  <link rel="stylesheet" type="text/css" href="/lib/fontawesome/css/all.min.css">
+  <script src="./ui.js"></script>
+  <link rel="stylesheet" type="text/css" href="./lib/fontawesome/css/all.min.css">
 </head>
 <body class="with-sidebar ">
   <div class="header">
@@ -60,9 +60,9 @@ MathJax.Hub.Config({
 });
 </script>
 <script type="text/javascript"
-  src="/lib/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="./lib/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
-<script src="/lib/google-code-prettify/run_prettify.js"></script>
+<script src="./lib/google-code-prettify/run_prettify.js"></script>
 <ul class="task-constraints">
 <li><b>Time limit:</b> 1.00 s</li>
 <li><b>Memory limit:</b> 512 MB</li>
