--- a/CP/lib/index.html
+++ b/CP/lib/index.html
@@ -60,9 +60,9 @@ MathJax.Hub.Config({
 });
 </script>
 <script type="text/javascript"
-  src="./lib/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="./MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
-<script src="./lib/google-code-prettify/run_prettify.js"></script>
+<script src="./google-code-prettify/run_prettify.js"></script>
 <ul class="task-constraints">
 <li><b>Time limit:</b> 1.00 s</li>
 <li><b>Memory limit:</b> 512 MB</li>
