--- a/CP/lib/index.html
+++ b/CP/lib/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="white" id="theme-color">
   <script type="application/json" id="darkmode-enabled">false</script>
   <script src="./ui.js"></script>
-  <link rel="stylesheet" type="text/css" href="./lib/fontawesome/css/all.min.css">
+  <link rel="stylesheet" type="text/css" href="./fontawesome/css/all.min.css">
 </head>
 <body class="with-sidebar ">
   <div class="header">
