--- a/CP/lib/index.html
+++ b/CP/lib/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet alternate" type="text/css" href="cses-dark.css?2" id="styles-dark">
   <meta name="theme-color" content="white" id="theme-color">
   <script type="application/json" id="darkmode-enabled">false</script>
+  <link rel="stylesheet " type="text/css" href="cses.css?2">  
   <script src="ui.js"></script>
   <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
 </head>
@@ -59,10 +60,8 @@ MathJax.Hub.Config({
   },
 });
 </script>
-<script type="text/javascript"
-  src="MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
-<script src="google-code-prettify/run_prettify.js"></script>
+<script src="MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script src="../google-code-prettify/run_prettify.js"></script>
 <ul class="task-constraints">
 <li><b>Time limit:</b> 1.00 s</li>
 <li><b>Memory limit:</b> 512 MB</li>
