--- a/CP/index.html
+++ b/CP/index.html
@@ -1073,7 +1073,7 @@ Input:<br>
 Output:<br>
 <code>201</code>    </div>
 <br/><br/> 
-<h1 style="color: green">Sorting and Searching</h1>  
+<h1 style="color: red">Sorting and Searching</h1>  
 <br/><br/>
 <h1>Distinct Numbers</h1>
 <div class="content">
